--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="hint">Please enter your height(In inches)</string>
-    <string name = "saveButton"> Save</string>
+    <string name="heightHint">Height (In inches)</string>
+    <string name="stepHint">Step Goal</string>
+    <string name = "updateHeightButton"> Update Height</string>
+    <string name = "updateStepButton"> Update Step Goal</string>
     <string name = "backButton"> Go to main page</string>
 </resources>
