#3: Keep Track of Steps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="walkRunSteps">0</string>
     <string name="steps">steps</string>
     <string name="stopWalkRunButton">Stop Walk/Run</string>
+    <string name="updateStep">update steps</string>
 </resources>
