--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="heightHint">Height (In inches)</string>
-    <string name="stepHint">Step Goal</string>
+    <string name="goalHint">Step Goal</string>
     <string name="updateHeightButton"> Update Height</string>
     <string name="updateStepButton"> Update Step Goal</string>
     <string name="backButton"> Go to main page</string>
@@ -21,10 +21,23 @@
     <string name="stepsShown">steps will be shown here</string>
     <string name="startWalkRunButton">Start Walk/Run</string>
     <string name="timer">00:00:00</string>
-    <string name="speed">0</string>
     <string name="mph">mph</string>
-    <string name="walkRunSteps">0</string>
     <string name="steps">steps</string>
     <string name="stopWalkRunButton">Stop Walk/Run</string>
     <string name="updateStep">update steps</string>
+    <string name="liveSteps">Your Live Daily Step Count</string>
+    <string name="Day">Day</string>
+    <string name="Time">Time</string>
+    <string name="Steps">Steps</string>
+    <string name="MPH">MPH</string>
+    <string name="Sun">Sun</string>
+    <string name="Mon">Mon</string>
+    <string name="Tues">Tues</string>
+    <string name="Wedn">Wedn</string>
+    <string name="Thurs">Thurs</string>
+    <string name="Fri">Fri</string>
+    <string name="Sat">Sat</string>
+    <string name="updateWalks">UPDATE WALKS</string>
+    <string name="personBest">Person Best</string>
+    <string name="team31">Team 31</string>
 </resources>
